k8s-manifests/stand-with-dorayaki-fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stand-with-dorayaki-fe
  namespace: swd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stand-with-dorayaki-fe
  template:
    metadata:
      labels:
        app: stand-with-dorayaki-fe
    spec:
      containers:
        - name: stand-with-dorayaki-fe
          image: kadeksuryam/stand-with-dorayaki-fe:v1.0.3
          imagePullPolicy: Always
          ports:
            - containerPort: 80
