k8s-manifests/stand-with-dorayaki-fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swd-fe-service
  namespace: swd
spec:
  selector:
    app: stand-with-dorayaki-fe
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
