k8s-manifests/stand-with-dorayaki-fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress-fe
  namespace: swd
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: swd.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: swd-fe-service
            port:
              number: 80
